--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bootstrap 101 Template</title>
+    <title>FA icon search</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
@@ -54,7 +54,7 @@ background-color: #77b0c7;background-image:url('data:image/svg+xml;base64,PHN2Zy
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#"><i class="icon-flag"></i> Font Awesome <small>icon search</small></a>
+        <a class="navbar-brand" href="#"><i class="icon-search"></i> Font Awesome <small>icon search</small></a>
       </div>
     
       <!-- Collect the nav links, forms, and other content for toggling -->
