--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ background-color: #77b0c7;background-image:url('data:image/svg+xml;base64,PHN2Zy
 
 
       }
-      .icon-3x {
+      .fa-3x {
         line-height: 90px;
         color: #636263;
         /*transition-timing-function: cubic-bezier(0.7,0.1,0.8,0.2);*/
@@ -38,7 +38,7 @@ background-color: #77b0c7;background-image:url('data:image/svg+xml;base64,PHN2Zy
         transition-property: font-size;
         transition-duration: 0.15s;
       }
-      .icon-3x:hover {
+      .fa-3x:hover {
         font-size: 90px;
         color: #000;
       }
@@ -129,7 +129,7 @@ background-color: #77b0c7;background-image:url('data:image/svg+xml;base64,PHN2Zy
       
       $.each(icondata.icons, function(n, i) {
         //console.log(i);
-        $('#icons').append('<div class="col-lg-1 icon" id="icon-'+i.id+'"><div class="panel panel-default"><div class="panel-body" style=" text-align:center;"><i class="icon-'+i.id+' icon-3x icon-fixed-width"></i></div><div class="panel-footer"><input class="form-control input-sm" type="text" value="'+i.id+'"> <span class="label label-default">'+i.unicode+'</span></div></div></div>');
+        $('#icons').append('<div class="col-lg-1 fac" id="fa-'+i.id+'"><div class="panel panel-default"><div class="panel-body" style=" text-align:center;"><i class="fa fa-'+i.id+' fa-3x fa-fixed-width"></i></div><div class="panel-footer"><input class="form-control input-sm" type="text" value="'+i.id+'"> <span class="label label-default">'+i.unicode+'</span></div></div></div>');
         /* Set up the clippies! */
         
       });
@@ -141,17 +141,17 @@ background-color: #77b0c7;background-image:url('data:image/svg+xml;base64,PHN2Zy
          console.log(val);
          if (val==='') {
              // Reenable all.
-             $('.icon').show();
+             $('.fac').show();
          } else {
              // Filter! :)
-             $('.icon').each(function(idx, el) {
-                 var normalized_class_name = el.id.replace(/^icon\-/, '').replace(/\W/g, ''),
+             $('.fac').each(function(idx, el) {
+                 var normalized_class_name = el.id.replace(/^fa\-/, '').replace(/\W/g, ''),
                      show = false;
-
+                 //console.log(normalized_class_name);
                  $.each(vals, function(i, v) {
                      if(v !== '' && normalized_class_name.indexOf(v) >= 0) {
                          show = true;
-                         console.log(normalized_class_name);
+                         //console.log(normalized_class_name);
                      }
                  });
                  $(el).toggle(show);
